--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^13.7.4",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "react-sortable-hoc": "^1.11.0",
+    "redux": "^4.0.5",
     "typescript": "^3.8.2"
   },
   "scripts": {
